--- a/example/assets/style.css
+++ b/example/assets/style.css
@@ -14,6 +14,6 @@ th,caption{text-align:left}
 .f-cb{zoom:1;}
 
 .ui-dropmenu-trigger{border: 1px solid #aaa; padding:5px 8px; text-decoration: none; color: #000;}
-.ui-dropmenu-content{border: 1px solid #aaa;}
+.ui-dropmenu-content{border: 1px solid #aaa; background-color: #fff;}
 .ui-dropmenu-item{padding: 0px 8px; cursor: pointer;}
 .ui-dropmenu-item:hover{background-color: #aaa;}
