当removeOption删除当前选项时特殊处理
另外，record.widget.util增加数据类型判断功能函数

--- a/example/assets/style.css
+++ b/example/assets/style.css
@@ -16,4 +16,5 @@ th,caption{text-align:left}
 .ui-dropmenu-trigger{border: 1px solid #aaa; padding:5px 8px; text-decoration: none; color: #000;}
 .ui-dropmenu-content{border: 1px solid #aaa; background-color: #fff;}
 .ui-dropmenu-item{padding: 0px 8px; cursor: pointer;}
+.ui-dropmenu-item-selected{background-color: #FF4411;}
 .ui-dropmenu-item:hover{background-color: #aaa;}
